--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-  padding: 0;
+ body{padding: 0;
   margin: 0;
  font-family: 'Prompt', sans-serif;
   font-weight: 400;
@@ -213,18 +213,6 @@ color: #02073E;
     overflow: hidden;
 }
 .custom_btn input[type=text]{
-  /*=====banner-area
-  opacity: 0.4;
-  background: #FFFFFF;
-  box-shadow: 0px 10px 50px rgba(48, 98, 145, 0.08);
-  border-radius: 5px;
-  float: left;
-  overflow: hidden;
-  padding-left: 15px;
-  margin-right: 15px;
-  height: 48px;
-  left: 284px;
-  top: 605px;=====*/
 
       font-family: 'DM Sans';
     font-style: normal;
